<resources>
    <string name="app_name">LoveCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_name">Second Name</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name">First Name</string>
    <string name="fist_name">Fist Name</string>
    <string name="result">Result</string>
    <string name="percentage">Percentage</string>
    <string name="try_again">Try Again</string>
    <string name="calculate">Calculate</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="history">History</string>
</resources>